fix matrices double border

--- a/browser/scss/widgets/_matrices.scss
+++ b/browser/scss/widgets/_matrices.scss
@@ -15,6 +15,8 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    margin-right:-1rem;
+    margin-bottom: -1rem;
 
     > .widget {
         min-height: 0;
